Corrected text alignment

--- a/css-ecommerce-page/styles.css
+++ b/css-ecommerce-page/styles.css
@@ -61,5 +61,9 @@ span {
 }
 
 .height {
-  height: 2rem;
+  height: 3rem;
+}
+
+.width {
+  width: 1300px;
 }
